--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   <script src="index.js" charset="utf-8" ></script>
 </body>
 <footer>
-  Made with ❤️ in London.
+  Made with ❤️ in India
 </footer>
 </html>
